# AI-Receptionist

./: .gitignore  README.md  pyproject.toml
ai_service/agents/: appointment_scheduler_agent.py  case_generator_agent.py  inventory_management_agent.py  supervisor_agent.py
ai_service/memories/: simple_memory.py
ai_service/prompts/: appointment_scheduler_prompt.py  case_generator_prompt.py  inventory_management_prompt.py
app/: main.py
